Fix some text wrap and alignment issues
I've made it so that the text wraps to a specific width. I set the div container for the images and text at specified width of 200px and then used justify-content:center on the main flex container to center those objects.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -16,10 +16,12 @@ img {
 
 .flex-container {
   display:flex;
+  justify-content: center;
   gap:52px;
 }
 
-.images{
+.images {
+  width:200px;
   text-align:center;
 }
 
